--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Immo Pepites - Votre marketplace immobilière de confiance"
+      content="Trouvez votre pépite immobilière en moins de 48h. Immo Pepites centralise les meilleures opportunités d'investissement locatif avant qu'elles ne disparaissent."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Immo Pepites</title>
+    <title>Immo Pépites - Trouvez votre pépite immobilière en 48h</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
