--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Trouvez votre pépite immobilière en moins de 48h. Immo Pepites centralise les meilleures opportunités d'investissement locatif avant qu'elles ne disparaissent."
+      content="Trouver les meilleures pépites en immobilier locatif 10x plus vite! Immo Pepites centralise les meilleures opportunités d'investissement locatif avant qu'elles ne disparaissent."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
